add first execution script

--- a/src/Roadkill.Tests/packages.config
+++ b/src/Roadkill.Tests/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Fizzler" version="0.9.3" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" requireReinstallation="True" />
-  <package id="IisConfiguration" version="1.0.5613.24603" targetFramework="net451" />
+  <package id="IisConfiguration" version="1.0.5613.24603" targetFramework="net451" requireReinstallation="True" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
