--- a/src/Roadkill.Web/Roadkill.config
+++ b/src/Roadkill.Web/Roadkill.config
@@ -1,16 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<roadkill
-	adminRoleName="Admin"
-	attachmentsFolder="~/App_Data/Attachments"
-	connectionStringName="Roadkill"
-	dataStoreType="SqlServer2012"
-	editorRoleName="Editor"
-	installed="true"
-	isPublicSite="true"
-	logging="none"
-	logErrorsOnly="true"
-	useWindowsAuthentication="false"
-	useObjectCache="false"
-	useBrowserCache="false"
-	version="2.0.0.0"
-/>
+<?xml version="1.0" encoding="utf-8" ?>
+<roadkill adminRoleName="Desenvolvimento" attachmentsFolder="~/App_Data/Attachments"
+ connectionStringName="Roadkill" dataStoreType="SqlServer2012"
+ editorRoleName="Desenvolvimento" installed="true" logging="none" 
+ useWindowsAuthentication="false"
+ ldapConnectionString="LDAP://mss.modulo.com.br"
+ ldapUsername="MSS\svc_rmsp" 
+ ldapPassword="7HgAGD9Z8HrSHk5oCMpw"
+ useObjectCache="false" version="2.0.275"
+          />
