--- a/src/Roadkill.Web/web.config
+++ b/src/Roadkill.Web/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Roadkill v2.0.275 -->
 <configuration>
 	<configSections>
@@ -23,9 +23,14 @@
 		<!-- Change the line below to the culture you need, it falls back to English -->
 		<globalization uiCulture="auto" culture="auto" />
 		<anonymousIdentification enabled="true" />
-		<authentication mode="Forms">
-			<forms loginUrl="~/User/Login" />
+    <authentication mode="Forms">
+  		<forms loginUrl="~/User/Login" />
 		</authentication>
+    <!--<authentication mode="Windows" />
+    <authorization>
+      <deny users="?"/>
+    </authorization>
+    -->
 		<compilation debug="true" targetFramework="4.5">
 			<assemblies>
 				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -173,10 +178,9 @@
 	<!-- Change these settings for signup and lost password emails -->
 	<system.net>
 		<mailSettings>
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="signup@roadkillwiki.net">
-				<!-- Roadkill caters for relative (~) paths in the drop folder -->
-				<specifiedPickupDirectory pickupDirectoryLocation="~/App_Data/TempSmtp" />
-			</smtp>
-		</mailSettings>
+      <smtp from="joao.lindgren@modulo.com">
+        <network host="smtp.modulo.com" port="25" />
+      </smtp>
+    </mailSettings>
 	</system.net>
 </configuration>
